Übung 11 fertig gemacht

--- a/Metasprachen/WebContent/Aufgabe 11/Ergebnis.html
+++ b/Metasprachen/WebContent/Aufgabe 11/Ergebnis.html
@@ -113,22 +113,16 @@
 		2011-11-11
 		):
 		9<br><h1>Dozenten</h1>
-<h2>1. Miede André
-			(Dozent-Nummer=
-			D782
-			)
-		</h2>
-<h2>2. Helmut Folz
-			(Dozent-Nummer=
-			D264
-			)
-		</h2>
-<h2>3. Pauly Wolfgang
-			(Dozent-Nummer=
-			D239
-			)
-		</h2>
-<h1>Vorlesungen</h1>
+<h2><a name="D782">
+		1. Miede André</a></h2>
+		Dozent-Nummer:
+		D782<h2><a name="D264">
+		2. Helmut Folz</a></h2>
+		Dozent-Nummer:
+		D264<h2><a name="D239">
+		3. Pauly Wolfgang</a></h2>
+		Dozent-Nummer:
+		D239<h1>Vorlesungen</h1>
 <h2>Betriebssystemeinführung
 			(Nummer:
 			PIB110
@@ -139,10 +133,13 @@
 		Kurzbeschreibung:
 		<br>
 		Dozent:
+		<a href="#D239">
 		
 				Wolfgang
 				Pauly
-			<br><a href="">Link zur Vorlesung</a><br><h2>Game Design And Development
+			</a>
+		<br><a href="
+		http://moduldb.htw-saarland.de/cgi-bin/moduldb-c?bkeys=pi&amp;ckeys=pbseinf&amp;lang=de">Link zur Vorlesung</a><br><h2>Game Design And Development
 			(Nummer:
 			PIBWI43
 			)
@@ -152,10 +149,13 @@
 		Kurzbeschreibung:
 		Einführung in die Spieleentwicklung<br>
 		Dozent:
+		<a href="#D782">
 		
 				André
 				Miede
-			<br><a href="">Link zur Vorlesung</a><br><h2>Programmierung 1
+			</a>
+		<br><a href="
+		">Link zur Vorlesung</a><br><h2>Programmierung 1
 			(Nummer:
 			PIB120
 			)
@@ -165,8 +165,11 @@
 		Kurzbeschreibung:
 		Einführung in die Programmierung mit Java<br>
 		Dozent:
+		<a href="#D264">
 		
 				Folz
 				Helmut
-			<br><a href="">Link zur Vorlesung</a><br></body>
+			</a>
+		<br><a href="
+		">Link zur Vorlesung</a><br></body>
 </html>
