HTML5-Konformität gewährleisten

--- a/Metasprachen/WebContent/Aufgabe 11/Ergebnis.html
+++ b/Metasprachen/WebContent/Aufgabe 11/Ergebnis.html
@@ -1,60 +1,141 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xml:lang="de" lang="de" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html SYSTEM "about:legacy-compat">
+<html>
 <head>
+<META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
 <title>Studium</title>
 </head>
 <body>
-	<h1 xmlns="">Studenten</h1>
-	<h2 xmlns="">1. Christian Backes (Matr.Nr.= M3583801 )</h2>
-	<h3 xmlns="">Adresse ( Heimat )</h3>
-	Straße: Lindenallee
-	<br xmlns=""> Hausnummer: 21<br xmlns=""> Land: DE<br xmlns=""> PLZ: 66538<br xmlns=""> Ort: Neunkirchen<br xmlns=""><h3 xmlns="">Prüfungen</h3>I. <a
-						href="#PIB120" xmlns="">Programmierung 1</a> ( 2013-10-10 ): 12<br xmlns="">II. <a href="#PIB110" xmlns="">Betriebssystemeinführung</a> ( 2012-12-12 ): 20<br xmlns="">III.
-								<a href="#PIBWI43" xmlns="">Game Design And Development</a> ( 2011-11-11 ): 20<br xmlns=""><h2 xmlns="">2. Kevin Noll (Matr.Nr.= M3583800 )</h2>
-									<h3 xmlns="">Adresse ( Heimat )</h3> Straße: Parkstraße<br xmlns=""> Hausnummer: 1<br xmlns=""> Land: DE<br xmlns=""> PLZ: 123456<br xmlns=""> Ort:
-													Heimat<br xmlns=""><h3 xmlns="">Prüfungen</h3>I. <a href="#PIB120" xmlns="">Programmierung 1</a> ( 2013-10-10 ): 16<br xmlns="">II. <a href="#PIB110"
-															xmlns="">Betriebssystemeinführung</a> ( 2012-12-12 ): 12<br xmlns="">III. <a href="#PIBWI43" xmlns="">Game Design And Development</a> ( 2011-11-11 ): 13<br
-																xmlns="">IV. <a href="#PIB423" xmlns="">Systemmanagement und Sicherheit</a> ( 2012-01-01 ): 11<br xmlns=""><h2 xmlns="">3. Benedikt Schmidt
-																			(Matr.Nr.= M3583821 )</h2>
-																		<h3 xmlns="">Adresse ( Heimat )</h3> Straße: Zum Bremmenfeld<br xmlns=""> Hausnummer: 14<br xmlns=""> Land: DE<br xmlns=""> PLZ: 66539<br xmlns="">
-																						Ort: Neunkirchen
-																						<h3 xmlns="">Adresse ( Semester )</h3> Straße: Hauptstraße<br xmlns=""> Hausnummer: 12<br xmlns=""> Land: Deutschland<br xmlns=""> PLZ: 66539<br
-																									xmlns=""> Ort: Neunkirchen<br xmlns=""><h3 xmlns="">Prüfungen</h3>I. <a href="#PIB120" xmlns="">Programmierung 1</a> ( 2013-10-10 ): 15<br
-																											xmlns="">II. <a href="#PIB110" xmlns="">Betriebssystemeinführung</a> ( 2012-12-12 ): 10<br xmlns="">III. <a href="#PIBWI43" xmlns="">Game
-																														Design And Development</a> ( 2011-11-11 ): 9<br xmlns=""><hr />
-																														<h1 xmlns="">Dozenten</h1>
-																														<h2 xmlns="">
-																															<a name="D264">1. Helmut Folz</a>
-																														</h2> Dozent-Nummer: D264
-																														<h2 xmlns="">
-																															<a name="D782">2. André Miede</a>
-																														</h2> Dozent-Nummer: D782
-																														<h2 xmlns="">
-																															<a name="D239">3. Wolfgang Pauly</a>
-																														</h2> Dozent-Nummer: D239
-																														<h2 xmlns="">
-																															<a name="D313">4. Damian Weber</a>
-																														</h2> Dozent-Nummer: D313
-																														<hr />
-																														<h1 xmlns="">Vorlesungen</h1>
-																														<h2 xmlns="">
-																															<a name="PIB110">Betriebssystemeinführung</a>
-																														</h2> Vorlesungsnummer: PIB110<br xmlns=""> Semesterwochenstunden: 2<br xmlns=""> Kurzbeschreibung: <br xmlns=""> Dozent: <a href="#D239"
-																																	xmlns="">Wolfgang Pauly</a><br xmlns=""><a href="http://moduldb.htw-saarland.de/cgi-bin/moduldb-c?bkeys=pi&amp;ckeys=pbseinf&amp;lang=de"
-																																		xmlns="">Link zur Vorlesung</a><br xmlns=""><h2 xmlns="">
-																																				<a name="PIBWI43">Game Design And Development</a>
-																																			</h2> Vorlesungsnummer: PIBWI43<br xmlns=""> Semesterwochenstunden: 2<br xmlns=""> Kurzbeschreibung: Einführung in die Spieleentwicklung<br
-																																					xmlns=""> Dozent: <a href="#D782" xmlns="">André Miede</a><br xmlns=""><a href="" xmlns="">Link zur Vorlesung</a><br xmlns=""><h2
-																																									xmlns="">
-																																									<a name="PIB120">Programmierung 1</a>
-																																								</h2> Vorlesungsnummer: PIB120<br xmlns=""> Semesterwochenstunden: 5<br xmlns=""> Kurzbeschreibung: Einführung in die Programmierung
-																																										mit Java<br xmlns=""> Dozent: <a href="#D264" xmlns="">Helmut Folz</a><br xmlns=""><a href="" xmlns="">Link zur Vorlesung</a><br
-																																												xmlns=""><h2 xmlns="">
-																																														<a name="PIB423">Systemmanagement und Sicherheit</a>
-																																													</h2> Vorlesungsnummer: PIB423<br xmlns=""> Semesterwochenstunden: 2<br xmlns=""> Kurzbeschreibung: <br xmlns=""> Dozent: <a
-																																																href="#D313" xmlns="">Damian Weber</a><br xmlns=""><a
-																																																	href="http://moduldb.htw-saarland.de/cgi-bin/moduldb-c?bkeys=pi&amp;ckeys=sysi&amp;lang=de" xmlns="">Link zur Vorlesung</a><br
-																																																	xmlns="">
+	<h1>Studenten</h1>
+	<h2>1. Christian Backes (Matr.Nr.= M3583801 )</h2>
+	<h3>Adresse ( Heimat )</h3>
+	Stra&szlig;e: Lindenallee
+	<br> Hausnummer: 21
+	<br> Land: DE
+	<br> PLZ: 66538
+	<br> Ort: Neunkirchen
+	<br>
+	<h3>Pr&uuml;fungen</h3>
+	I.
+	<a href="#PIB120">Programmierung 1</a> ( 2013-10-10 ): 12
+	<br>II.
+	<a href="#PIB110">Betriebssystemeinf&uuml;hrung</a> ( 2012-12-12 ): 20
+	<br>III.
+	<a href="#PIBWI43">Game Design And Development</a> ( 2011-11-11 ): 20
+	<br>
+	<h2>2. Kevin Noll (Matr.Nr.= M3583800 )</h2>
+	<h3>Adresse ( Heimat )</h3>
+	Stra&szlig;e: Parkstra&szlig;e
+	<br> Hausnummer: 1
+	<br> Land: DE
+	<br> PLZ: 123456
+	<br> Ort: Heimat
+	<br>
+	<h3>Pr&uuml;fungen</h3>
+	I.
+	<a href="#PIB120">Programmierung 1</a> ( 2013-10-10 ): 16
+	<br>II.
+	<a href="#PIB110">Betriebssystemeinf&uuml;hrung</a> ( 2012-12-12 ): 12
+	<br>III.
+	<a href="#PIBWI43">Game Design And Development</a> ( 2011-11-11 ): 13
+	<br>IV.
+	<a href="#PIB423">Systemmanagement und Sicherheit</a> ( 2012-01-01 ):
+	11
+	<br>
+	<h2>3. Benedikt Schmidt (Matr.Nr.= M3583821 )</h2>
+	<h3>Adresse ( Heimat )</h3>
+	Stra&szlig;e: Zum Bremmenfeld
+	<br> Hausnummer: 14
+	<br> Land: DE
+	<br> PLZ: 66539
+	<br> Ort: Neunkirchen
+	<h3>Adresse ( Semester )</h3>
+	Stra&szlig;e: Hauptstra&szlig;e
+	<br> Hausnummer: 12
+	<br> Land: Deutschland
+	<br> PLZ: 66539
+	<br> Ort: Neunkirchen
+	<br>
+	<h3>Pr&uuml;fungen</h3>
+	I.
+	<a href="#PIB120">Programmierung 1</a> ( 2013-10-10 ): 15
+	<br>II.
+	<a href="#PIB110">Betriebssystemeinf&uuml;hrung</a> ( 2012-12-12 ): 10
+	<br>III.
+	<a href="#PIBWI43">Game Design And Development</a> ( 2011-11-11 ): 9
+	<br>
+	<hr>
+	<h1>Dozenten</h1>
+	<h2>
+		<a name="D264">1. Helmut Folz</a>
+	</h2>
+	Dozent-Nummer: D264
+	<h2>
+		<a name="D782">2. Andr&eacute; Miede</a>
+	</h2>
+	Dozent-Nummer: D782
+	<h2>
+		<a name="D239">3. Wolfgang Pauly</a>
+	</h2>
+	Dozent-Nummer: D239
+	<h2>
+		<a name="D313">4. Damian Weber</a>
+	</h2>
+	Dozent-Nummer: D313
+	<hr>
+	<h1>Vorlesungen</h1>
+	<h2>
+		<a name="PIB110">Betriebssystemeinf&uuml;hrung</a>
+	</h2>
+	Vorlesungsnummer: PIB110
+	<br> Semesterwochenstunden: 2
+	<br> Kurzbeschreibung:
+	<br> Dozent:
+
+	<a href="#D239">Wolfgang Pauly</a>
+	<br>
+	<a
+		href="http://moduldb.htw-saarland.de/cgi-bin/moduldb-c?bkeys=pi&amp;ckeys=pbseinf&amp;lang=de">Link
+		zur Vorlesung</a>
+	<br>
+	<h2>
+		<a name="PIBWI43">Game Design And Development</a>
+	</h2>
+	Vorlesungsnummer: PIBWI43
+	<br> Semesterwochenstunden: 2
+	<br> Kurzbeschreibung: Einf&uuml;hrung in die Spieleentwicklung
+	<br> Dozent:
+
+	<a href="#D782">Andr&eacute; Miede</a>
+	<br>
+	<a href="">Link zur Vorlesung</a>
+	<br>
+	<h2>
+		<a name="PIB120">Programmierung 1</a>
+	</h2>
+	Vorlesungsnummer: PIB120
+	<br> Semesterwochenstunden: 5
+	<br> Kurzbeschreibung: Einf&uuml;hrung in die Programmierung mit
+	Java
+	<br> Dozent:
+
+	<a href="#D264">Helmut Folz</a>
+	<br>
+	<a href="">Link zur Vorlesung</a>
+	<br>
+	<h2>
+		<a name="PIB423">Systemmanagement und Sicherheit</a>
+	</h2>
+	Vorlesungsnummer: PIB423
+	<br> Semesterwochenstunden: 2
+	<br> Kurzbeschreibung:
+	<br> Dozent:
+
+	<a href="#D313">Damian Weber</a>
+	<br>
+	<a
+		href="http://moduldb.htw-saarland.de/cgi-bin/moduldb-c?bkeys=pi&amp;ckeys=sysi&amp;lang=de">Link
+		zur Vorlesung</a>
+	<br>
 </body>
 </html>
