--- a/Metasprachen/WebContent/Aufgabe 16 KN/server/index.html
+++ b/Metasprachen/WebContent/Aufgabe 16 KN/server/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>Beispiel</title>
-<meta charset='utf-8' />
 
-<script>
+<script type="text/javascript">
 	window.onload = start;
 
 	function start() {
